--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -9,11 +9,17 @@
     color: gray;
     -webkit-box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
+    max-height: 500px;
+    /* 设置最大高度 */
+    overflow-y: auto;
 
 
     h1 {
         font-size: 18px;
         font-weight: 500;
+        display: flex;
+        flex-direction: column;
+        position: sticky;
     }
 
     .item {
