--- a/client/src/components/List/List.scss
+++ b/client/src/components/List/List.scss
@@ -1,8 +1,8 @@
 .list {
     margin-top: 5px;
     display: flex;
-    justify-content: space-between;
-    gap: 10px;
+    // justify-content: space-between;
+    gap: 58px;
     flex-wrap: wrap;
 
 }
