--- a/client/src/pages/Products/Products.scss
+++ b/client/src/pages/Products/Products.scss
@@ -27,12 +27,19 @@
     .right {
         flex: 3;
         margin-left: 30px;
+        // display: flex;
+        // flex-direction: column;
 
         .catImg {
             width: 100%;
             height: 300px;
             object-fit: cover;
         }
+
+        // .lists {
+        //     width: 100%;
+        //     flex: 1;
+        // }
     }
 
 }
