--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -2,16 +2,15 @@
     padding: 20px;
     position: absolute;
     right: 20px;
-    top: 80px;
+    top: 70px;
     z-index: 999;
     background-color: #fff;
     width: 400px;
     color: gray;
+    // 浮雕效果
     -webkit-box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 0px 7px -5px rgba(0, 0, 0, 0.5);
-    max-height: 500px;
-    /* 设置最大高度 */
-    overflow-y: auto;
+
 
 
     h1 {
@@ -22,6 +21,11 @@
         position: sticky;
     }
 
+    .items {
+        overflow-y: auto;
+        max-height: 470px;
+    }
+
     .item {
         width: 350px;
         display: flex;
@@ -30,19 +34,20 @@
         margin-bottom: 20px;
 
         .desc {
-            // background-color: pink;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             flex: auto;
+            width: 200px;
 
             .title {
                 height: 30px;
+                // text-overflow: ellipsis; //超出部分以省略号显示
+                // white-space: nowrap;
+                // overflow: hidden;
+
             }
 
-            p {
-                font-size: 13px;
-            }
         }
 
         h1 {
