实现心愿单功能

--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -71,7 +71,7 @@
         }
 
         .delete {
-            color: red;
+            color: #c8443d;
             font-size: 30px;
             cursor: pointer;
         }
