--- a/client/src/pages/WishList/WishList.scss
+++ b/client/src/pages/WishList/WishList.scss
@@ -79,19 +79,31 @@
             }
         }
 
-        .add {
+        .cartAction {
             display: flex;
+            flex: 2;
             align-items: center;
-            height: 50px;
-            margin-bottom: 15px;
-            cursor: pointer;
-            border: none;
-            background-color: #3d7bf6;
-            color: #fff;
-            width: 250px;
-            justify-content: center;
-            margin-right: 30px;
-            border-radius: 10px;
+
+            .add {
+                display: flex;
+                align-items: center;
+                height: 50px;
+                margin-bottom: 15px;
+                cursor: pointer;
+                border: none;
+                background-color: #3d7bf6;
+                color: #fff;
+                width: 250px;
+                justify-content: center;
+                border-radius: 10px;
+            }
+
+            .delete {
+                flex: 1;
+                color: #c8443d;
+                font-size: 30px;
+                cursor: pointer;
+            }
         }
 
     }
