--- a/client/src/components/Contact/Contact.scss
+++ b/client/src/components/Contact/Contact.scss
@@ -1,42 +1,57 @@
-.contact {
-    background-color: #2879fe;
-    color: white;
+.whole {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    padding: 12px;
+    align-items: center;
+    text-align: center;
+    width: 100%; // text-align: center;
 
-    .wrapper {
-        width: 50%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        span {
-            font-weight: 700;
-            font-size: 10px;
-        }
-
-        input {
-            border-radius: 5px 0 0 5px;
-            border: none;
-            padding: 10px;
-        }
-
-        button {
-            padding: 10px;
-            background-color: #333;
-            font-size: 13px;
-            border: none;
-            border-radius: 0 5px 5px 0;
-            color: #fff;
-        }
-
-        .icons {
-            display: flex;
-            gap: 10px;
-        }
-
+    p {
+        color: gray;
+        margin-bottom: 50px;
     }
 
+    .contact {
+        width: 100%;
+        background-color: #2879fe;
+        color: white;
+        display: flex;
+        justify-content: center;
+        padding: 12px;
 
+        .wrapper {
+            width: 50%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            span {
+                font-weight: 700;
+                font-size: 10px;
+            }
+
+            input {
+                border-radius: 5px 0 0 5px;
+                border: none;
+                padding: 10px;
+            }
+
+            button {
+                padding: 10px;
+                background-color: #333;
+                font-size: 13px;
+                border: none;
+                border-radius: 0 5px 5px 0;
+                color: #fff;
+            }
+
+            .icons {
+                display: flex;
+                gap: 10px;
+            }
+
+        }
+
+
+    }
 }
